VERSION 0.24 (2018-04-??)
  * .Rprofile loads environment throu set_env.R not to load RSuite before
     environment is configured properly.
  * set_env.R default script_path set to R (relative to base project dir).

VERSION 0.23 (2018-03-09)
  * SystemRequirements field in package DESCRIPTION interpretation and handling
     of declared system requirements implemented.

VERSION 0.22 (2018-01-19)
  * RC revision is checked for validity: Git tags containing non digits prevent
     packages from building when tagged.
  * Project can be packed with dest R version enforcement to support CLI docker
     command.
  * Support packages are detected and installed into sbox while collecting
     dependencies: as for now only libraries required to run roclets on project
     packages.
  * Imports consistency with declared in package DESCRIPTION fixed.

VERSION 0.21 (2018-01-17)
  * Repository cache handling enhanced. It is recached if older than 1 week.
  * Fixed repository caching for R 3.2
  * Then packing project dest R version is not checked.
  * Then generating DESCRIPTION for package user name is converted to latin1
     to get rid of all locale specific characters.
  * Handling RoxygenExtraRoclets in package DESCRIPTION file.
  * MRAN repository uses https by default

VERSION 0.20 (2017-12-08)
  * Caching of available packages from each repository to build faster with CLI.
  * While building project packages it detects changes in package sources.
     If no changes detected package will not be rebuilt and package from intrepo
     will be installed.
  * Remote packages downloaded are cached. So next time they are ready which
     reduces dependency collection time.
  * Fix in package version comparison

VERSION 0.19 (2017-11-23)
  * Detection imports in package NAMESPACE fixed to support comma separated lists.
  * Defaut set_env.R fixed to create user specific log file if has no access to default.
  * Version restriction handling fixed, tests created.